--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1>HOMEPAGE!</h1>
-    <p><a href="christsAmbassadors/TacoFeed/TicketCollection/index.html>Taco Feed Ticket Collector</a></p>
-    <p><a href="christsAmbassadors/TacoFeed/TicketSales/index.html>Taco Feed Ticket Sales</a></p>
+    <p><a href="christsAmbassadors/TacoFeed/TicketCollection/index.html">Taco Feed Ticket Collector</a></p>
+    <p><a href="christsAmbassadors/TacoFeed/TicketSales/index.html">Taco Feed Ticket Sales</a></p>
   </body>
 </html>
