--- a/christsAmbassadors/TacoFeed/TicketCollection/index.html
+++ b/christsAmbassadors/TacoFeed/TicketCollection/index.html
@@ -11,7 +11,7 @@
     <link href="style.css" type="text/css" rel="stylesheet" />
     
     <link rel="stylesheet" href="../Assets/pure-release-0.6.0/pure-min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
   </head>
   <body>
