Scalable Text Update

--- a/christsAmbassadors/TacoFeed/TicketCollection/index.html
+++ b/christsAmbassadors/TacoFeed/TicketCollection/index.html
@@ -16,9 +16,12 @@
   </head>
   <body>
     <img id="back" alt="Background Image" src="../Assets/BackgroundImage2.jpg" />
+    <button id="download" class="pure-button"><a href="TacoFeed.zip" download>Download</a></button>
     <div class="pure-g">
-      <p class="pure-u-1" style="padding-bottom:14%;margin-bottom:0;"></p>
-      <h1 class="pure-u-1" style="padding-top:0;margin-top:0;">Taco Feed Ticket Collection</h1>
+      <p class="pure-u-1" id="top-bar"></p>
+      <div class="pure-u-3-24"></div>
+      <h1 class="pure-u-18-24" style="padding-top:0;margin-top:0;">Taco Feed Ticket Collection</h1>
+      <div class="pure-u-3-24"></div>
       
       <div class="pure-u-3-24"></div>
       <div class="pure-u-8-24 maindiv">
