--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
         </div>
       </div>
     </div>
+    <script src="christsAmbassadors/TacoFeed/Assets/jquery-3.1.0.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
