--- a/christsAmbassadors/TacoFeed/TicketSales/index.html
+++ b/christsAmbassadors/TacoFeed/TicketSales/index.html
@@ -16,8 +16,9 @@
   </head>
   <body>
     <img id="back" alt="BackgroundImage" src="../Assets/BackgroundImage2.jpg" />
+    <button id="download" class="pure-button"><a href="TacoFeed.zip" download>Download</a></button>
     <div class="pure-g">
-      <p class="pure-u-1" style="padding-top:14%;margin:0"></p>
+      <p class="pure-u-1" id="top-bar"></p>
       <h1 class="pure-u-1">Taco Feed Ticket Sales</h1>
       <div class="pure-u-3-24"></div>
       <div class="pure-u-18-24 maindiv">
