--- a/christsAmbassadors/TacoFeed/TicketSales/index.html
+++ b/christsAmbassadors/TacoFeed/TicketSales/index.html
@@ -67,15 +67,20 @@
         <div class="pure-u-1-4">
           <h2 class="pure-u-1">Donations</h2>
         </div>
-        <form id="dButton" class="pure-u-2-3 pure-form">
-          <div class="pure-u-1"></div>
-          <input type="number"
-                 class="pure-u-11-24"
-                 placeholder="0"
-                 id="donations"/>
-          <div class="pure-u-1-24"></div>
-          <button type="submit" class="pure-u-11-24 pure-button" id="DButton"><b>Enter</b></button>
-        </form>
+        <div class="pure-u-2-3">
+          <form id="dButton" class="pure-g pure-form">
+            <div class="pure-u-1"></div>
+            <div class="pure-u-11-24">
+              <input type="number"
+                     class="pure-u-1"
+                     placeholder="0"
+                     id="donations"
+                     style="margin-top:.8em"/>
+            </div>
+            <div class="pure-u-1-24"></div>
+            <button type="submit" class="pure-u-11-24 pure-button" id="DButton"><b>Enter</b></button>
+          </form>
+        </div>
       </div>
       
       
