--- a/christsAmbassadors/TacoFeed/TicketSales/index.html
+++ b/christsAmbassadors/TacoFeed/TicketSales/index.html
@@ -71,14 +71,17 @@
           <form id="dButton" class="pure-g pure-form">
             <div class="pure-u-1"></div>
             <div class="pure-u-11-24">
+              <div class="pure-u-1"></div>
               <input type="number"
                      class="pure-u-1"
                      placeholder="0"
-                     id="donations"
-                     style="margin-top:.8em"/>
+                     id="donations"/>
             </div>
             <div class="pure-u-1-24"></div>
-            <button type="submit" class="pure-u-11-24 pure-button" id="DButton"><b>Enter</b></button>
+            <div class="pure-u-11-24">
+              <div class="pure-u-1"></div>
+              <button type="submit" class="pure-u-1 pure-button" id="DButton"><b>Enter</b></button>
+            </div>
           </form>
         </div>
       </div>
