Added first three visual projects to BB homepage.

--- a/index.html
+++ b/index.html
@@ -16,15 +16,33 @@
     <h1>Bigfoot's Binder</h1>
     
     <div id="binder">
-      <div class="page">
+      <div class="page1">
         <div class="content">
           <h2>Taco Feed</h2>
-          <div class="maindiv">
-            <p><a href="christsAmbassadors/TacoFeed/TicketCollection/index.html">Taco Feed Ticket Collection</a></p>
-          </div>
-          <div class="maindiv">
-            <p><a href="christsAmbassadors/TacoFeed/TicketSales/index.html">Taco Feed Ticket Sales</a></p>
-          </div>
+          <ul>
+            <li class="maindiv">
+              <p><a href="christsAmbassadors/TacoFeed/TicketCollection/index.html">Taco Feed Ticket Collection</a></p>
+            </li>
+            <li class="maindiv">
+              <p><a href="christsAmbassadors/TacoFeed/TicketSales/index.html">Taco Feed Ticket Sales</a></p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="page2">
+        <div class="content">
+          <h2>Visual Projects</h2>
+          <ul>
+            <li class="maindiv">
+              <p><a href="VisualProjects/DFMG.windows64.zip" download>Depth-First Maze Generator</a></p>
+            </li>
+            <li class="maindiv">
+              <p><a href="VisualProjects/CGOL.windows64.zip" download>Conway's Game of Life</a></p>
+            </li>
+            <li class="maindiv">
+              <p><a href="VisualProjects/SPRO.windows64.zip" download>Spirograph Simulator</a></p>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
